rust/dbn-macros/tests/ui/json_serialize_invalid_dbn_attr.stderr
error: Invalid attr `unknown` passed to `#[dbn]`
 --> tests/ui/json_serialize_invalid_dbn_attr.rs:6:11
  |
6 |     #[dbn(unknown)]
  |           ^^^^^^^

error[E0433]: failed to resolve: could not find `encode` in the crate root
 --> tests/ui/json_serialize_invalid_dbn_attr.rs:3:10
  |
3 | #[derive(JsonSerialize)]
  |          ^^^^^^^^^^^^^ could not find `encode` in the crate root
  |
  = note: this error originates in the derive macro `JsonSerialize` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0433]: failed to resolve: could not find `json_writer` in the crate root
 --> tests/ui/json_serialize_invalid_dbn_attr.rs:3:10
  |
3 | #[derive(JsonSerialize)]
  |          ^^^^^^^^^^^^^ could not find `json_writer` in the crate root
  |
  = note: this error originates in the derive macro `JsonSerialize` (in Nightly builds, run with -Z macro-backtrace for more info)
